# encontro-de-engenharia-apoenastack

./: README.md
Encontros de Engenharia/10_streamlit_apps_analiticos/docs/: 1-primeira-etapa.md  2-basic-elements.md  3-estados-sessao.md  4-callbacks.md  5-layouts.md  6-advanced.md
Encontros de Engenharia/10_streamlit_apps_analiticos/src/: main.py  pyproject.toml
Encontros de Engenharia/11_pydantic_intro/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  pyproject.toml
Encontros de Engenharia/12_sqlalchemy/: database.db  example_1.py  example_2.py  example_3.py  pyproject.toml
