[project]
name = "11-pydantic-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Iury Rosal",email = "iuryrosal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "fastapi[standard] (>=0.128.8,<0.129.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
