[project]
name = "12-sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "Iury Rosal",email = "iuryrosal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.47,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
