[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Iury Rosal",email = "iuryrosal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (==2.3.3)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
